# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@npm//jest-cli:index.bzl", "jest_test")

jest_test(
    name = "jest",
    args = [
        "--no-cache",
        "--no-watchman",
        "--ci",
        "--config",
        "$(execpath //:jest.config.js)",
        "--runTestsByPath",
        "$(location //test:index.test.ts)",
    ],
    data = [
        ":cases",
        ":index.test.ts",
        "//:jest.config.js",
        "//:package.json",
        "//:tsconfig.json",
        "//src:index",
        "//src/com/google/common/css:css_ts",
        "@npm//gts",
        "@npm//mock-fs",
        "@npm//postcss",
        "@npm//ts-jest",
        "@npm//typescript",
    ],
)
